[package]
name = "guardpetal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
dirs = "5.0"
flate2 = "1.0"
hex = "0.4"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = "7.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
zeroize = "1.7"
